--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1936,7 +1936,95 @@
     "genOtp": "OTP generieren",
     "signSelect": "Auswahl unterschreiben",
     "correction": "Zur Korrektur senden",
-    "reject": "Ablehnen"
+    "reject": "Ablehnen",
+    "receipting": {
+      "capture_receipt": "Quittung erfassen",
+      "receipt_details": "Empfangsdetails",
+      "currency": "Währung",
+      "payment_mode": "Zahlungsweise",
+      "bank_account": "Bankkonto",
+      "receipting_point": "Empfangsstelle",
+      "amount_issued": "Ausgegebener Betrag",
+      "open_cheque": "Offener Scheck",
+      "ipf_financier": "IPF-Finanzierer",
+      "gross_receipt_amount": "Brutto-Empfangsbetrag",
+      "received_from": "Erhalten von",
+      "drawers_bank": "Ausstellende Bank",
+      "receipt_date": "Empfangsdatum",
+      "narration": "Erklärung",
+      "payment_ref": "Zahlungsreferenz",
+      "other_ref": "Andere Ref.",
+      "document_date": "Dokumentdatum",
+      "manual_ref": "Manuelle Ref.",
+      "save_receipt": "Empfang speichern",
+      "print_receipt": "Empfang drucken",
+      "cancel_receipt": "Empfang abbrechen",
+      "search_transactions": "Transaktionen suchen",
+      "print_confirmation": "Druckbestätigung",
+      "print_status": "Druckstatus",
+      "printed": "Gedruckt",
+      "spoilt_receipt_paper": "Beschädigtes Empfangspapier",
+      "not_printed": "Nicht gedruckt",
+      "saveReceipt": "Quittung speichern",
+      "printReceipt": "Quittung drucken",
+      "cancel": "Abbrechen",
+      "captureReceipt": "Quittung erfassen",
+      "charges": "Gebühren",
+      "capitalInjection": "Kapitalzufuhr",
+      "deductions": "Abzüge",
+      "chargeAmount": "Gebührenbetrag",
+      "uploadFiles": "Dateien hochladen"
+    },
+    "allocation": {
+      "allocate_funds": "Mittel zuweisen",
+      "add_allocation": "Zuweisung hinzufügen",
+      "transactions": "Transaktionen",
+      "policies": "Policen",
+      "group_business_accounts": "Konten für Gruppenbetrieb",
+      "gl_accounts": "GL-Konten",
+      "client_name": "Kundenname",
+      "amount": "Betrag",
+      "allocated_amount": "Zugewiesener Betrag",
+      "policy_number": "Policennummer",
+      "account_number": "Kontonummer",
+      "code": "Code",
+      "description": "Beschreibung",
+      "total_allocated_amount": "Gesamt zugewiesener Betrag",
+      "save_allocations": "Zuweisungen speichern",
+      "print_receipt": "Empfang drucken",
+      "cancel_receipt": "Empfang abbrechen",
+      
+      "allocation_type": "Zuweisungstyp",
+      "allocatedAmount": "Zugewiesener Betrag"
+    },
+    "account_type": {
+      "manage_account_type": "Kontotyp verwalten"
+    },
+      "receipt_authorization": {
+        "title": "Quittungsgenehmigung",
+        "normal_tab": "Normale Quittungen",
+        "batch_tab": "Stapelquittungen",
+        "select_all": "Alle auswählen",
+        "authorize_all": "Alle genehmigen",
+        "reject_all": "Alle ablehnen",
+        "Search":"suche",
+        "receipt_no": "Quittungsnummer",
+        "policy_no": "Policennummer",
+        "payment_memo": "Zahlungsnotiz",
+        "amount": "Betrag",
+        "capture_date": "Erfassungsdatum",
+        "authorization_date":"Genehmigungsdatum",
+        "status": "Status",
+        "actions":"Aktionen",
+        "authorize": "Genehmigen",
+        "reject": "Ablehnen",
+        "rejection_remarks": "Ablehnungsgründe",
+        "close": "Schließen",
+        "statement_no": "Aussage-Nr.",
+        "total_amount": "Gesamtbetrag",
+        "send_sms_alerts": "SMS-Benachrichtigungen senden"
+      }
+    
   },
   "campaignMngmt": {
     "campaigns": "Kampagnen",
