--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2343,7 +2343,93 @@
     "genOtp": "Generar OTP",
     "signSelect": "Firmar selección",
     "correction": "Enviar para corrección",
-    "reject": "Rechazar"
+    "reject": "Rechazar",
+    "receipting": {
+      "receipt_details": "Detalles del Recibo",
+      "capture_receipt": "Capturar Recibo",
+      "currency": "Moneda",
+      "payment_mode": "Modo de Pago",
+      "bank_account": "Cuenta Bancaria",
+      "receipting_point": "Punto de Recepción",
+      "amount_issued": "Cantidad Emitida",
+      "open_cheque": "Cheque Abierto",
+      "ipf_financier": "Financiador IPF",
+      "gross_receipt_amount": "Importe Bruto del Recibo",
+      "received_from": "Recibido de",
+      "drawers_bank": "Banco del Librador",
+      "receipt_date": "Fecha del Recibo",
+      "narration": "Narración",
+      "payment_ref": "Referencia de Pago",
+      "other_ref": "Otra Referencia",
+      "document_date": "Fecha del Documento",
+      "manual_ref": "Referencia Manual",
+      "save_receipt": "Guardar Recibo",
+      "print_receipt": "Imprimir Recibo",
+      "cancel_receipt": "Cancelar Recibo",
+      "search_transactions": "Buscar Transacciones",
+      "print_confirmation": "Confirmación de Impresión",
+      "print_status": "Estado de Impresión",
+      "printed": "Impreso",
+      "spoilt_receipt_paper": "Papel de Recibo Dañado",
+      "not_printed": "No Impreso",
+      "charges": "Cargos",
+    "capitalInjection": "Inyección de Capital",
+    "deductions": "Deducciones",
+    "chargeAmount": "Monto del Cargo",
+    "uploadFiles": "Cargar Archivos"
+    },
+    
+      
+    
+    
+    "allocation": {
+      "allocate_funds": "Asignar Fondos",
+      "transactions": "Transacciones",
+      "policies": "Políticas",
+      "group_business_accounts": "Cuentas de Negocios Grupales",
+      "gl_accounts": "Cuentas GL",
+      "client_name": "Nombre del Cliente",
+      "amount": "Cantidad",
+      "allocated_amount": "Cantidad Asignada",
+      "policy_number": "Número de Póliza",
+      "account_number": "Número de Cuenta",
+      "code": "Código",
+      "description": "Descripción",
+      "total_allocated_amount": "Cantidad Total Asignada",
+       "allocation_type": "Tipo de Asignación",
+      "allocatedAmount": "Cantidad Asignada",
+      "save_allocations": "Guardar Asignaciones",
+      "print_receipt": "Imprimir Recibo",
+      "cancel_receipt": "Cancelar Recibo"
+    },
+    "account_types": {
+      "manage_account_type": "Gestionar Tipo de Cuenta"
+  },
+      "receipt_authorization": {
+        "title": "Autorización de Recibos",
+        "normal_tab": "Recibos Normales",
+        "batch_tab": "Recibos en Lote",
+        "select_all": "Seleccionar Todo",
+        "authorize_all": "Autorizar Todo",
+        "reject_all": "Rechazar Todo",
+        "search":"Buscar",
+        "receipt_no": "Número de Recibo",
+        "policy_no": "Número de Póliza",
+        "payment_memo": "Memorando de Pago",
+        "amount": "Cantidad",
+        "capture_date": "Fecha de Captura",
+        "authorization_date":"fecha de autorización",
+        "status": "Estado",
+        "actions":"Acciones",
+        "authorize": "Autorizar",
+        "reject": "Rechazar",
+        "rejection_remarks": "Observaciones de Rechazo",
+        "close": "Cerrar",
+        "statement_no": "Número de Estado de Cuenta",
+        "total_amount": "Cantidad Total",
+        "send_sms_alerts": "Enviar Alertas SMS"
+      }
+    
   },
   "campaignMngmt": {
     "campaigns": "Campañas",
