--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2347,7 +2347,87 @@
     "genOtp": "Générer OTP",
     "signSelect": "Signer la sélection",
     "correction": "Envoyer pour correction",
-    "reject": "Rejeter"
+    "reject": "Rejeter",
+    "receipting": {
+      "receipt_details": "Détails du Reçu",
+      "capture_receipt": "Capturer le reçu",
+      "currency": "Devise",
+      "payment_mode": "Mode de Paiement",
+      "bank_account": "Compte Bancaire",
+      "receipting_point": "Point de Réception",
+      "amount_issued": "Montant Émis",
+      "open_cheque": "Chèque Ouvert",
+      "ipf_financier": "Financeur IPF",
+      "gross_receipt_amount": "Montant Brut du Reçu",
+      "received_from": "Reçu de",
+      "drawers_bank": "Banque du Tirez",
+      "receipt_date": "Date du Reçu",
+      "narration": "Narration",
+      "payment_ref": "Ref. de Paiement",
+      "other_ref": "Autre Ref.",
+      "document_date": "Date du Document",
+      "manual_ref": "Ref. Manuelle",
+      "save_receipt": "Enregistrer le Reçu",
+      "print_receipt": "Imprimer le Reçu",
+      "cancel_receipt": "Annuler le Reçu",
+      "search_transactions": "Rechercher les Transactions",
+      "print_confirmation": "Confirmation d'Impression",
+      "print_status": "Statut d'Impression",
+      "printed": "Imprimé",
+      "spoilt_receipt_paper": "Papier de Reçu Abîmé",
+      "not_printed": "Non Imprimé",
+      "charges": "Frais",
+      "capitalInjection": "Injection de capital",
+      "deductions": "Déductions",
+      "chargeAmount": "Montant des frais",
+      "uploadFiles": "Télécharger des fichiers"
+    },
+    "allocation": {
+      "allocate_funds": "Allouer des Fonds",
+      "transactions": "Transactions",
+      "policies": "Polices",
+      "group_business_accounts": "Comptes d'Entreprise de Groupe",
+      "gl_accounts": "Comptes GL",
+      "client_name": "Nom du Client",
+      "amount": "Montant",
+      "allocated_amount": "Montant Alloué",
+      "policy_number": "Numéro de Police",
+      "account_number": "Numéro de Compte",
+      "code": "Code",
+      "description": "Description",
+      "total_allocated_amount": "Montant Total Alloué",
+      "save_allocations": "Enregistrer les Allocations",
+      "print_receipt": "Imprimer le Reçu",
+      "allocation_type": "Type d'allocation",
+      "allocatedAmount": "Montant alloué",
+      "cancel_receipt": "Annuler le Reçu"
+    },
+   
+      "receipt_authorization": {
+        "title": "Autorisation de reçus",
+        "normal_tab": "Reçus normaux",
+        "batch_tab": "Reçus en lot",
+        "select_all": "Sélectionner tout",
+        "authorize_all": "Autoriser tout",
+        "reject_all": "Rejeter tout",
+        "searchs":"Recherche",
+        "receipt_no": "Numéro de reçu",
+        "policy_no": "Numéro de police",
+        "payment_memo": "Mémo de paiement",
+        "amount": "Montant",
+        "capture_date": "Date de capture",
+        "authorization_date":"date d'autorisation",
+        "status": "Statut",
+        "actions":"Actions",
+        "authorize": "Autoriser",
+        "reject": "Rejeter",
+        "rejection_remarks": "Remarques de rejet",
+        "close": "Fermer",
+        "statement_no": "Numéro de relevé",
+        "total_amount": "Montant total",
+        "send_sms_alerts": "Envoyer des alertes SMS"
+      }
+    
   },
   "campaignMngmt": {
     "campaigns": "Campagnes",
