--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -1937,7 +1937,90 @@
     "genOtp": "Tengeneza OTP",
     "signSelect": "Chagua sahihi",
     "correction": "Tuma kwa marekebisho",
-    "reject": "Kataa"
+    "reject": "Kataa",
+    "receipting": {
+      "capture_receipt": "Shika Risiti",
+      "receipt_details": "Maelezo ya Risiti",
+      "currency": "Fedha",
+      "payment_mode": "Njia ya Malipo",
+      "bank_account": "Akaunti ya Benki",
+      "receipting_point": "Sehemu ya Kupokea Risiti",
+      "amount_issued": "Kiasi Kilichotolewa",
+      "open_cheque": "Hundi Wazi",
+      "ipf_financier": "Mtoa Fedha wa IPF",
+      "gross_receipt_amount": "Kiasi cha Jumla cha Risiti",
+      "received_from": "Imepokelewa Kutoka",
+      "drawers_bank": "Benki ya Mtoa Hundi",
+      "receipt_date": "Tarehe ya Risiti",
+      "narration": "Maelezo",
+      "payment_ref": "Marejeleo ya Malipo",
+      "other_ref": "Marejeleo Mengine",
+      "document_date": "Tarehe ya Hati",
+      "manual_ref": "Marejeleo ya Mwongozo",
+      "save_receipt": "Hifadhi Risiti",
+      "print_receipt": "Chapisha Risiti",
+      "cancel_receipt": "Ghairi Risiti",
+      "search_transactions": "Tafuta Miamala",
+      "print_confirmation": "Uthibitisho wa Kuchapisha",
+      "print_status": "Hali ya Kuchapisha",
+      "printed": "Imechapishwa",
+      "spoilt_receipt_paper": "Karatasi ya Risiti Iliyoharibika",
+      "not_printed": "Haikuchapishwa",
+      "charges": "Malipo ",
+    "capitalInjection": "Uingizaji wa Mtaji",
+    "deductions": "Vikwazo",
+    "chargeAmount": "Kiasi cha Malipo",
+    "uploadFiles": "Pakia Faili"
+    },
+    "allocation": {
+      "allocate_funds": "Tenganisha Fedha",
+      "transactions": "Miamala",
+      "policies": "Sera",
+      "group_business_accounts": "Akaunti za Biashara za Kikundi",
+      "gl_accounts": "Akaunti za GL",
+      "client_name": "Jina la Mteja",
+      "amount": "Kiasi",
+      "allocated_amount": "Kiasi Kilichohifadhiwa",
+      "policy_number": "Nambari ya Sera",
+      "account_number": "Nambari ya Akaunti",
+      "code": "Kanuni",
+      "description": "Maelezo",
+      "allocation_type": "Aina ya Ugawaji",
+      "allocatedAmount": "Kiasi Kilichowekwa",
+      "total_allocated_amount": "Kiasi cha Jumla Kilichohifadhiwa",
+      "save_allocations": "Hifadhi Mgawanyiko",
+      "print_receipt": "Chapisha Risiti",
+      "cancel_receipt": "Ghairi Risiti"
+    },
+    "account_type": {
+      "manage_account_type": "Dhibiti Aina ya Akaunti"
+    }
+  ,
+      "receipt_authorization": {
+        "title": "Uthibitishaji wa Risiti",
+        "normal_tab": "Risiti za Kawaida",
+        "batch_tab": "Risiti za Kundi",
+        "select_all": "Chagua Zote",
+        "authorize_all": "Thibitisha Zote",
+        "reject_all": "Kataa Zote",
+        "receipt_no": "Nambari ya Risiti",
+        "search":"tafuta",
+        "policy_no": "Nambari ya Bima",
+        "payment_memo": "Kumbukumbu ya Malipo",
+        "amount": "Kiasi",
+        "capture_date": "Tarehe ya Unakiliaji",
+        "authorization_date":"tarehe ya uthibitisho",
+        "status": "Hali",
+        "actions":"Vitendo",
+        "authorize": "Thibitisha",
+        "reject": "Kataa",
+        "rejection_remarks": "Maelezo ya Kukataa",
+        "close": "Funga",
+        "statement_no": "Nambari ya Taarifa",
+        "total_amount": "Kiasi Jumla",
+        "send_sms_alerts": "Tuma Tahadhari za SMS"
+      }
+    
   },
   "campaignMngmt": {
     "campaigns": "Kampeni",
