VQ-1792/Quotation Summary unit tests/multilingual

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1711,7 +1711,72 @@
           "other_name": "Otro nombre",
           "choose_file": "Elegir archivo"
         },
-        "summary": {}
+        "summary": {
+          "group_quote_summary": "Resumen de cotización de grupo",
+          "here_is_the_quote_summary_for_the": "Aquí está el resumen de cotización para el",
+          "premium": "Prima",
+          "sum_assured": "Suma asegurada",
+          "quotation_number": "Número de cotización",
+          "product": "Producto",
+          "currency": "Moneda",
+          "commission_amount": "Monto de la comisión",
+          "not_specified": "No especificado",
+          "quotation_status": "Estado de la cotización",
+          "frequency_of_payment": "Frecuencia de pago",
+          "duration_type": "Tipo de duración",
+          "agent": "Agente",
+          "effective_date": "Fecha de vigencia",
+          "inception_date": "Fecha de inicio",
+          "client_name": "Nombre del cliente",
+          "cover_summary": "Resumen de coberturas",
+          "view_more": "ver más",
+          "category_summary": "Resumen de categoría",
+          "multiple_of_earnings": "Multiplicador de ingresos",
+          "members_summary": "Resumen de miembros",
+          "members_covered": "Miembros cubiertos",
+          "computed_free_cover_limit": "Límite de cobertura gratuita calculado",
+          "members_above_computed_FCL": "Miembros por encima del límite calculado",
+          "fcl_override": "Anulación del límite",
+          "members_above_override_fcl": "Miembros por encima de la anulación",
+          "view_members_list": "ver lista de miembros",
+          "member_details": "Detalles del miembro",
+          "search": "Buscar",
+          "surname": "Apellido",
+          "other_names": "Otros nombres",
+          "date_of_birth": "Fecha de nacimiento",
+          "gender": "Género",
+          "payroll_or_member_no": "Nómina/Número de miembro",
+          "category": "Categoría",
+          "dependant_type": "Tipo de dependiente",
+          "member_cover_types_summary": "Resumen de tipos de cobertura de miembros",
+          "cover_type": "Tipo de cobertura",
+          "cover_effect_from": "Cobertura efectiva desde",
+          "cover_effect_to": "Cobertura efectiva hasta",
+          "back_to_summary": "Volver al resumen",
+          "category_details": "Detalles de la categoría",
+          "category_description": "Descripción de la categoría",
+          "select_rate": "Seleccionar tasa",
+          "premium_mask": "Máscara de prima",
+          "dependant_limit": "Límite de dependientes",
+          "lives_covered": "Vidas cubiertas",
+          "minimum_amount": "Monto mínimo",
+          "maimum_limit_amount": "Monto máximo",
+          "rate": "Tasa",
+          "division factor": "Factor de división",
+          "percentage_of_main_sa": "% de la SA principal",
+          "inbuilt": "Incorporado",
+          "accelerated": "Acelerado",
+          "main_cover_rider": "Cobertura principal adicional",
+          "cover_details": "Detalles de la cobertura",
+          "cover_types": "Tipos de cobertura",
+          "override_premiums": "Anulación de primas",
+          "rate_division_factor": "Factor de división de la tasa",
+          "main_cover": "Cobertura principal",
+          "back": "Volver",
+          "reports": "Informes",
+          "share": "Compartir",
+          "finish": "Terminar"
+        }        
       },
       "agent_portal": {
         "policy": "Póliza",
