--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1715,7 +1715,72 @@
           "other_name": "Autre nom",
           "choose_file": "Choisir un fichier"
         },
-        "summary": {}
+        "summary": {
+          "group_quote_summary": "Résumé de devis de groupe",
+          "here_is_the_quote_summary_for_the": "Voici le résumé du devis pour le",
+          "premium": "Prime",
+          "sum_assured": "Capital assuré",
+          "quotation_number": "Numéro de devis",
+          "product": "Produit",
+          "currency": "Devise",
+          "commission_amount": "Montant de la commission",
+          "not_specified": "Non spécifié",
+          "quotation_status": "Statut du devis",
+          "frequency_of_payment": "Fréquence de paiement",
+          "duration_type": "Type de durée",
+          "agent": "Agent",
+          "effective_date": "Date d'effet",
+          "inception_date": "Date de début",
+          "client_name": "Nom du client",
+          "cover_summary": "Résumé des garanties",
+          "view_more": "voir plus",
+          "category_summary": "Résumé de catégorie",
+          "multiple_of_earnings": "Multiples des revenus",
+          "members_summary": "Résumé des membres",
+          "members_covered": "Membres couverts",
+          "computed_free_cover_limit": "Limite de couverture gratuite calculée",
+          "members_above_computed_FCL": "Membres au-dessus de la limite calculée",
+          "fcl_override": "Dérogation à la limite",
+          "members_above_override_fcl": "Membres au-dessus de la dérogation",
+          "view_members_list": "voir la liste des membres",
+          "member_details": "Détails du membre",
+          "search": "Rechercher",
+          "surname": "Nom de famille",
+          "other_names": "Autres prénoms",
+          "date_of_birth": "Date de naissance",
+          "gender": "Genre",
+          "payroll_or_member_no": "Numéro de paie/membre",
+          "category": "Catégorie",
+          "dependant_type": "Type de bénéficiaire",
+          "member_cover_types_summary": "Résumé des types de couverture des membres",
+          "cover_type": "Type de couverture",
+          "cover_effect_from": "Effet de la couverture à partir de",
+          "cover_effect_to": "Effet de la couverture jusqu'à",
+          "back_to_summary": "Retour au résumé",
+          "category_details": "Détails de la catégorie",
+          "category_description": "Description de la catégorie",
+          "select_rate": "Sélectionner le taux",
+          "premium_mask": "Masque de prime",
+          "dependant_limit": "Limite des bénéficiaires",
+          "lives_covered": "Vies couvertes",
+          "minimum_amount": "Montant minimum",
+          "maimum_limit_amount": "Montant maximum",
+          "rate": "Taux",
+          "division factor": "Facteur de division",
+          "percentage_of_main_sa": "% du SA principal",
+          "inbuilt": "Inclus",
+          "accelerated": "Accéléré",
+          "main_cover_rider": "Garantie principale supplémentaire",
+          "cover_details": "Détails de la couverture",
+          "cover_types": "Types de couverture",
+          "override_premiums": "Dérogation des primes",
+          "rate_division_factor": "Facteur de division du taux",
+          "main_cover": "Garantie principale",
+          "back": "Retour",
+          "reports": "Rapports",
+          "share": "Partager",
+          "finish": "Terminer"
+        }        
       },
       "agent_portal": {
         "policy": "Police",
