Added FMS-receipting Multilingual features

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -172,9 +172,19 @@
     "Required Documents": "所需文件",
     "Service Provider Type": "服务提供者类型",
     "FMS": "FMS",
-    "General ledger": "总账",
+    "General Ledger": "总账",
     "Cashbook": "现金账簿",
-    "Cheques": "支票",
+    "Creditors":"应付账款",
+    "Debtors":"应收账款",
+    "Parameters": "参数",
+    "Transactions": "交易",
+    "Invoices/Cr Notes": "贷方发票/通知",
+    "Invoices/DR Notes":"借方发票/通知",
+    "Inquiries": "查询",
+    "Requisitions": "申请",
+    "cheques": "支票",
+    "pettyCash": "零用现金",
+
     "Cheque signing": "支票签署",
     "Campaigns": "活动",
     "Client Attributes": "客户属性",
