--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -172,8 +172,15 @@
     "Required Documents": "Vereiste documenten",
     "Service Provider Type": "Soort dienstverlener",
     "FMS": "FMS",
-    "General ledger": "Hauptbuch",
+    "General Ledger": "Hauptbuch",
     "Cashbook": "Kassenbuch",
+    "Creditors":"Kreditoren",
+    "Debtors":"Debitoren",
+    "Parameters": "Hauptbuch-Parameter",
+    "Transactions": "Hauptbuch-Transaktionen",
+    "Inquiries": "Hauptbuch-Anfragen",
+    "Gl-Final Reports": "Hauptbuch-Abschlussberichte",
+    "invoicesDrNotes": "Rechnungen/Belastungsanzeigen",
     "Cheques": "Schecks",
     "Cheque signing": "Unterzeichnung von Schecks",
     "Campaigns": "Kampagnen",
