--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -172,9 +172,20 @@
     "Required Documents": "Documentos requeridos",
     "Service Provider Type": "Tipo de proveedor de servicios",
     "FMS": "FMS",
-    "General ledger": "Libro mayor",
+    "General Ledger": "Libro Mayor",
     "Cashbook": "Libro de caja",
+    "Debtors":"Deudores",
+    "Creditors":"Acreedores",
+    "Parameters": "Parámetros del Libro Mayor",
+    "Transactions": "Transacciones del Libro Mayor",
+    "Inquiries": "Consultas del Libro Mayor",
+    "FinalReports": "Informes Finales del Libro Mayor",
+    "Invoices/DR Notes": "Facturas/Notas de Débito",
+    "invoicesCrNotes":"Facturas/Notas de Crédito",
+    
+    "Requisitions": "Requisiciones",
     "Cheques": "Cheques",
+    "Petty cash": "Caja Chica",
     "Cheque signing": "Firma de cheques",
     "Campaigns": "Campañas",
     "Client Attributes": "Atributos del Cliente",
