--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -172,8 +172,18 @@
     "Required Documents": "Documents requis",
     "Service Provider Type": "Type de prestataire de services",
     "FMS": "FMS",
-    "General ledger": "Grand livre",
+    "General Ledger": "Grand livre",
     "Cashbook": "Livre de caisse",
+    "Creditors":"Créanciers",
+    "Debtors":"Débiteurs",
+    "Parameters": "Paramètres",
+        "Transactions": "Transactions",
+        "Invoices/Cr Notes": "Factures/Notes de Crédit",
+        "Invoices/DR Notes": "Factures/Notes de Débit",
+        "Inquiries": "Demandes",
+        "Requisitions": "Réquisitions",
+           "Gl-Final Reports": "Rapports Finaux du Grand Livre",
+        "Petty cash": "Petite Caisse",
     "Cheques": "Chèques",
     "Cheque signing": "Signature de chèque",
     "Campaigns": "Campagnes",
