added fms multilingual feature for ke.json file

--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -172,10 +172,21 @@
     "Required Documents": "Hati za Kuhitajika",
     "Service Provider Type": "Aina za Watoa Huduma",
     "FMS": "FMS",
-    "General ledger": "Ledger Kuu",
+    "General Ledger": "Ledger Kuu",
     "Cashbook": "Kitabu cha Fedha",
+    "Creditors":"Wadai",
+    "Debtors":"Wadaiwa",
     "Cheques": "Hundi",
+     "Gl-Final Reports": "Ripoti za Mwisho za Leja",
+    "Invoices/DR Notes": "Ankara/Notisi za Madeni",
     "Cheque signing": "Kusaini hundi",
+     "Inquiries": "Maswali",
+     "Parameters": "Vigezo",
+     "Transactions": "Miamala",
+     "Requisitions": "Maombi",
+     "cheques": "Hundi",
+     "Petty cash": "Fedha Ndogo",
+
     "Campaigns": "Kampeni",
     "Client Attributes": "Sifa za Mteja",
     "Product Attributes": "Sifa za Bidhaa",
